<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workoutadd.WorkoutAddActivity">

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/view_toolbar" />

    <com.akay.fitnass.ui.custom.Timer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:text="@string/text_chronometer_initial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_start"
        app:layout_constraintTop_toBottomOf="@id/chronometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_pause" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_text_pause"
        app:layout_constraintTop_toTopOf="@id/btn_start"
        app:layout_constraintStart_toEndOf="@id/btn_start"
        app:layout_constraintEnd_toStartOf="@id/btn_reset" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_text_reset"
        app:layout_constraintTop_toTopOf="@id/btn_start"
        app:layout_constraintStart_toEndOf="@id/btn_pause"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_text_save"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintEnd_toStartOf="@id/btn_lap" />

    <Button
        android:id="@+id/btn_lap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_text_lap"
        app:layout_constraintTop_toBottomOf="@id/btn_start"
        app:layout_constraintEnd_toEndOf="@id/btn_reset"
        app:layout_constraintStart_toEndOf="@id/btn_save" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_workout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_lap_workout"/>

</android.support.constraint.ConstraintLayout>